# VNTTS

./: .gitattributes  .gitignore  =1.12.38  =1.4.2  DYNAMIC_LOADING_FIX.md  DYNAMIC_LOADING_FIX_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  PYPI_FIX.md  PYPI_SETUP.md  README.md  RELEASE.md  examples.py  pyproject.toml  test_dynamic_loading.py  test_integration.py
.github/: CONTRIBUTING.md
.github/workflows/: publish-pypi.yml  tests.yml
models/: README.md
models/banmai/: banmai.part002  vi_VN-25hours_single-low.onnx.sha256
scripts/: merge_model.py  split_model.py
src/vntts/: __init__.py  model_downloader.py  model_parts.py  stt.py  tts.py
src/vntts/models/: README.md
src/vntts/models/asr/sherpa-onnx-zipformer-vi-2025-04-20/: encoder-epoch-12-avg-8.onnx.sha256
src/vntts/models/banmai/: banmai.onnx  banmai.onnx.sha256
test/: pipeline_test.py
tests/: test_model_downloader.py  test_model_parts.py  test_stt.py  test_tts.py
